# finch-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/tests/: test_cli.rs
cli/tests/data/: query.fa
lib/: Cargo.toml
lib/src/: distance.rs  errors.rs  filtering.rs  lib.rs  python.rs  statistics.rs
lib/src/serialization/: finch_capnp.rs  json.rs  mash.capnp  mash.rs  mash_capnp.rs  mod.rs
lib/src/sketch_schemes/: counts.rs  hashing.rs  mash.rs  mod.rs  scaled.rs
paper/: codemeta.json  generate_figures.ipy  paper.bib  paper.md
src/: cardinality.rs  distance.rs  errors.rs  filtering.rs  lib.rs  main.rs  main_parsing.rs  mash_capnp.rs  minhash_queue.rs  minhashes.rs  python.rs  serialization.rs  statistics.rs
src/hash_schemes/: counts.rs  hashing.rs  minhashes.rs  mod.rs  scaled.rs
src/serialization/: finch.capnp  finch_capnp.rs  json.rs  mash.rs  mash_capnp.rs  mod.rs
src/sketch_schemes/: counts.rs  mash.rs  mod.rs  scaled.rs
tests/: .test_cli.rs.swp  finch_cli.rs  test_cli.rs
tests/data/: query.fa
