[package]
name = "finch"
version = "0.3.0"
authors = ["Roderick Bovee & One Codex <roderick@onecodex.com>"]
description = "An implementation of min-wise independent permutation locality sensitive hashing ('MinHashing') for genomic data and command-line utility for manipulation."
keywords = ["minhash", "bioinformatics", "sketches"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/onecodex/finch-rs"
license = "MIT"
readme = "./README.md"
edition = "2018"

[dependencies]
capnp = { version = "0.9.4", optional = true}
clap = "2.33.0"
failure = "0.1.2"
memmap = "0.7.0"
murmurhash3 = "0.0.5"
ndarray = "0.12"
needletail = "0.3.1"
numpy = { version = "0.4.1", optional = true }
pyo3 = { version = "0.5.3", optional = true }
rayon = "1.2.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
proptest = "0.9.0"

[features]
default = ["mash_format"]
mash_format = ["capnp"]
python = ["numpy", "pyo3"]

[lib]
crate-type=["cdylib", "rlib"]
