[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "finch-sketch"
maintainer = "One Codex"
classifier = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
readme = "README.md"

[tool.maturin]
manifest-path = "lib/Cargo.toml"
bindings = "pyo3"
features = ["python"]
exclude = ["lib/README.md"]
