[package]
name = "finch_cli"
version = "0.4.0"
authors = ["One Codex <vincent@onecodex.com>"]
description = "An implementation of min-wise independent permutation locality sensitive hashing ('MinHashing') for genomic data and command-line utility for manipulation."
keywords = ["minhash", "bioinformatics", "sketches"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/onecodex/finch-rs"
license = "MIT"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "finch"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
finch = { version = "0.4", path = "../lib" }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
proptest = "0.10"
