[package]
name = "finch"
version = "0.6.2"
authors = ["One Codex <vincent@onecodex.com>"]
description = "An implementation of min-wise independent permutation locality sensitive hashing ('MinHashing') for genomic data and command-line utility for manipulation."
keywords = ["minhash", "bioinformatics", "sketches"]
categories = ["science"]
repository = "https://github.com/onecodex/finch-rs"
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
bincode = "1.2.0"
capnp = "0.14"
memmap = "0.7.0"
murmurhash3 = "0.0.5"
needletail = "0.5"
numpy = { version = "0.18", optional = true }
pyo3 = { version = "0.18", optional = true }
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
predicates = "2"
proptest = "1"

[features]
default = []
python = ["pyo3", "pyo3/extension-module", "numpy"]

[lib]
crate-type=["cdylib", "rlib"]
name = "finch"
